<resources>

    <string name="app_name">快乐计算</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_main_face">快乐计算</string>
    <string name="title_activity_start_game">开始游戏</string>
    <string name="title_activity_contact_us">联系我们</string>
	<string name="determin">确定</string>
    
	<string name="startGameBtn">开始游戏</string>
	<string name="typeSettingBtn">游戏设置</string>
	<string name="languageSettingBtn">语言设置</string>
	<string name="judgeNeighborBtn">挑战邻居</string>
	<string name="rankingCheckBtn">排名查询</string>
	<string name="contactUsBtn">联系我们</string>
	
	<!-- start:language settings -->
	<string name="language_title">语言设置</string>
	<string name="language_singlechinese">简体中文</string>
	<string name="language_complexchinese">繁体中文</string>
	<string name="language_english">英语</string>
	<string name="language_french">法语</string>
	<string name="language_german">德语</string>
	<string name="language_stupid">土著语[艳艳专用，勿点]</string>
	<!-- end  :language settings -->
	
	<!-- start:contact us properties -->
	<string name="contact_producer">制作者：张荣华</string>
	<string name="contact_email">邮  箱：zhangronghua309@sina.com</string>
	<string name="contact_address">地  址：中国江苏</string>
	<string name="contact_vote">投一票哇，(女)汉子</string>
	<!-- end  :contact us properties -->
</resources>