<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
	    android:id="@+id/languageSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/language_title">
	</TextView>
	<RadioButton
	    android:id="@+id/singleChinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="56dp"
        android:text="@string/language_singlechinese">
	</RadioButton>
	<RadioButton
	    android:id="@+id/complexChinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="86dp"
        android:text="@string/language_complexchinese">
	</RadioButton>
	<RadioButton
	    android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="116dp"
        android:text="@string/language_english">
	</RadioButton>
	<RadioButton
	    android:id="@+id/french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="146dp"
        android:text="@string/language_french">
	</RadioButton>
	<RadioButton
	    android:id="@+id/german"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="176dp"
        android:text="@string/language_german">
	</RadioButton>
	<RadioButton
	    android:id="@+id/stupid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="206dp"
        android:text="@string/language_stupid">
	</RadioButton>
    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:width="180dp"
        android:onClick="changeLanguageFun"
        android:text="@string/determin" />
</RelativeLayout>
